fix team spacing

--- a/css/style.css
+++ b/css/style.css
@@ -928,13 +928,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 /*md*/
 @media (min-width: 992px) {
   #team .member .pic {
-    height: 290px;
+    height: 210px;
   }
 }
 /*lg*/
 @media (min-width: 1200px) {
   #team .member .pic {
-    height: 350px;
+    height: 260px;
   }
 }
 
